Testimonial gap fixedd

--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -875,7 +875,6 @@ section.two-cols {
   section.hero .testimonials-grid__item:nth-child(5) .blocks-wrapper .blocks {
     width: 35px;
     height: 35px;
-    background-color: red;
   }
 
   section.hero .testimonials-grid__item:nth-child(5) .blocks-wrapper {
